# Report-Parser

./: .coverage  .coverage.rc  .gitignore  README.md  main.py  pyproject.toml
report_app/: employee.py  exceptions.py  main.py  parser.py  reports.py  tmp.py
tests/: test_progam.py
