[project]
name = "test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["report_app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "coverage>=7.13.0",
    "ruff>=0.14.8",
    "types-tabulate>=0.9.0.20241207",
]
